fixed dark mode elements

--- a/static/tailwind/tailwind.css
+++ b/static/tailwind/tailwind.css
@@ -2310,9 +2310,19 @@ img {
   background-color: rgba(7, 89, 133, var(--tw-bg-opacity));
 }
 
+.hover\:bg-cyan-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(14, 116, 144, var(--tw-bg-opacity));
+}
+
 .hover\:bg-yellow-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(180, 83, 9, var(--tw-bg-opacity));
+}
+
+.hover\:bg-yellow-900:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(120, 53, 15, var(--tw-bg-opacity));
 }
 
 .dark .dark\:bg-gray-700 {
@@ -2335,9 +2345,34 @@ img {
   background-color: rgba(251, 191, 36, var(--tw-bg-opacity));
 }
 
+.dark .dark\:hover\:bg-fuchsia-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(134, 25, 143, var(--tw-bg-opacity));
+}
+
+.dark .dark\:hover\:bg-pink-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(157, 23, 77, var(--tw-bg-opacity));
+}
+
+.dark .dark\:hover\:bg-green-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(22, 101, 52, var(--tw-bg-opacity));
+}
+
+.dark .dark\:hover\:bg-blue-800:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(7, 89, 133, var(--tw-bg-opacity));
+}
+
 .dark .dark\:hover\:bg-cyan-700:hover {
   --tw-bg-opacity: 1;
   background-color: rgba(14, 116, 144, var(--tw-bg-opacity));
+}
+
+.dark .dark\:hover\:bg-yellow-700:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgba(180, 83, 9, var(--tw-bg-opacity));
 }
 
 .dark .dark\:hover\:bg-yellow-900:hover {
